dark mode almost done, info modal fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+body {transition: 300ms;}
 .logo-row {
     height: 20vh;
 }
@@ -19,18 +20,18 @@
 }
 
 .tab-btn {
-    background-color: #F7F7F7;
     color: #000;
     width: 120px;
     border-radius: 15px;
 }
 
 .tab-selected {
-    background-color: #000000;
+    background-color: #313131;
     color: #fff;
 }
-
-
+.br-20px {
+    border-radius: 20px !important;
+}
 
 #pause-stopwatch-icon {
     font-size: 30px !important;
@@ -53,24 +54,24 @@
 
 
 .my-button {
+    
     border: none !important;
-    background-color: #F7F7F7 !important;
     border-radius: 30px !important;
     padding: 0px !important;
     width: 80px !important;
     height: 80px !important;
     transition: 300ms;
 }
-.my-button:hover {
-    background-color: #efefef !important;
-}
 
 .footer-button {
-    background-color: #F7F7F7 !important;
     height: 40px !important;
     width: 40px !important;
     border-radius: 40px !important;
     border: none !important;
+}
+
+.clickable {
+    background-color: #ededed;
 }
 
 
